--- a/index.html
+++ b/index.html
@@ -28,28 +28,32 @@
     </div>
     <div class="container-lg py-5">
         <div class="row align-items-center justify-content-center">
-            <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-5">
+            <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-4">
                 <div class="display-5 text-success fw-bold my-2">One-click solution for your static website</div>
                 <div class="d-flex text-gray small my-4">Image from &nbsp<div class="border-bottom border-success">Freepik</div></div>
                 <div class="d-flex my-3">
-                    <a href="#" class="text-white small fst-normal border-1 rounded-3 bg-success my-3 px-2 py-2 "><i class="bi-upload px-2">&nbsp Upload for Free</i></a>
-                    <a href="#" class="text-dark small fst-normal fw-bold border-1 rounded-3 bg-light mx-4 my-3 px-2 py-2 "><i class="bi-youtube px-2">&nbsp Upload for Free</i></a>
+                    <a href="#" class="text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 px-2 py-2 "><i class="bi-upload px-2">&nbsp Upload for Free</i></a>
+                    <a href="#" class="text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none mx-4 my-3 px-2 py-2 "><i class="bi-youtube px-2">&nbsp Upload for Free</i></a>
                 </div>
             </div>
-            <div class="col-10 col-sm-10 col-md-5 col-lg-6 col-xl-5">
+            <div class="col-10 col-sm-10 col-md-5 col-lg-6 col-xl-4">
                 <img src="img/01.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
     <div class="container-lg">
         <div class="bg-light">
-            <div class="row">
-                <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-5">
-                    <div class="display-5 text-success fw-bold my-2">Hosting solutions</div>
-                    <div class="d-flex text-gray small my-4">Image from &nbsp<div class="border-bottom border-success">Freepik</div></div>
-                    <div class="d-flex my-3">
-                        <a href="#" class="text-white small fst-normal border-1 rounded-3 bg-success my-3 px-2 py-2 "><i class="bi-upload px-2">&nbsp Upload for Free</i></a>
-                        <a href="#" class="text-dark small fst-normal fw-bold border-1 rounded-3 bg-light mx-4 my-3 px-2 py-2 "><i class="bi-youtube px-2">&nbsp Upload for Free</i></a>
+            <div class="py-5">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-5">
+                        <div class="display-5 text-success fw-bold my-2">Hosting solutions with benefits.</div>
+                        <div class="text-dark h6 my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis sint sed inventore quaerat omnis quod libero. Nemo quasi minus ducimus.</div>
+                        <a href="#" class="text-center text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-4 px-4 py-2">read more</a>
+                    </div>
+                    <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-5">
+                        <div class="row">
+    
+                        </div>
                     </div>
                 </div>
             </div>
