--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     </div>
     <div class="container-lg py-5">
         <div class="row align-items-center justify-content-center">
-            <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-4">
+            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5">
                 <div class="display-5 text-success fw-bold my-2">One-click solution for your static website</div>
                 <div class="d-flex text-gray small my-4">Image from &nbsp<div class="border-bottom border-success">Freepik</div></div>
                 <div class="d-flex my-3">
-                    <a href="#" class="text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 px-2 py-2 "><i class="bi-upload px-2">&nbsp Upload for Free</i></a>
-                    <a href="#" class="text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none mx-4 my-3 px-2 py-2 "><i class="bi-youtube px-2">&nbsp Upload for Free</i></a>
+                    <a href="#" class="text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 px-1 py-2 "><i class="bi-upload px-2">&nbsp Upload for Free</i></a>
+                    <a href="#" class="text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none mx-2 my-3 px-1 py-2 "><i class="bi-youtube px-2">&nbsp Upload for Free</i></a>
                 </div>
             </div>
-            <div class="col-10 col-sm-10 col-md-5 col-lg-6 col-xl-4">
+            <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 my-3">
                 <img src="img/01.png" class="img-fluid" alt="">
             </div>
         </div>
@@ -45,14 +45,59 @@
         <div class="bg-light">
             <div class="py-5">
                 <div class="row align-items-center justify-content-center">
-                    <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-5">
+                    <div class="col-10 col-sm-7 col-md-8 col-lg-5 col-xl-6">
                         <div class="display-5 text-success fw-bold my-2">Hosting solutions with benefits.</div>
                         <div class="text-dark h6 my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis sint sed inventore quaerat omnis quod libero. Nemo quasi minus ducimus.</div>
                         <a href="#" class="text-center text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-4 px-4 py-2">read more</a>
                     </div>
-                    <div class="col-10 col-sm-7 col-md-5 col-lg-4 col-xl-5">
-                        <div class="row">
-    
+                    <div class="col-10 col-sm-7 col-md-10 col-lg-7 col-xl-6 my-5">
+                        <div class="row align-items-center justify-content-center g-4">
+                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 my-2">
+                                <div class="card border-0 my-3 text-center bg-white">
+                                    <div class="">
+                                        <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
+                                        <a href="#" class="text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="h4 text-success my-3">SSL Certificate</div>
+                                        <div class="fst-italic small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facere quae? Eos cum perferendis error.</div>
+                                        <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark"> MORE</div></a>
+                                    </div>
+                                </div>
+                                <div class="card border-0 my-3 text-center bg-white">
+                                    <div class="">
+                                        <div class="my-4"><i class="bi-code-square bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="h4 text-success my-3">Code Editor</div>
+                                        <div class="fst-italic small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facere quae? Eos cum perferendis error.</div>
+                                        <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark"> MORE</div></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class=" col-10 col-sm-8 col-md-10 col-lg-6 col-xl-5 my-1">
+                                <div class="card border-0 my-3 text-center bg-white">
+                                    <div class="">
+                                        <div class="my-4"><i class="bi-globe bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="h4 text-success my-3">Personal Domain</div>
+                                        <div class="fst-italic small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facere quae? Eos cum perferendis error.</div>
+                                        <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark"> MORE</div></a>
+                                    </div>
+                                </div>
+                                <div class="card border-0 my-3 text-center bg-white">
+                                    <div class="">
+                                        <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
+                                        <a href="#" class="text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="h4 text-success my-3">SSL Certificate</div>
+                                        <div class="fst-italic small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facere quae? Eos cum perferendis error.</div>
+                                        <a href="#" class="text-decoration-underline text-success m-5"><div class="text-dark"> MORE</div></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
