--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
 </head>
 <body>
     <div class="bg-white">
-        <div class="container-lg py-2">
+        <div class="container-xl navbar-xl fixed-top bg-light bg-opacity-50 py-2">
             <div class="d-flex justify-content-between align-items-center">
-                <div><i class="fs-4 text-secondary fst-normal fw-semibold">logo</i></div>
+                <div><i class="fs-4 text-secondary fst-normal fw-semibold mx-3">logo</i></div>
                 <div>
                     <a href="#" class="fs-3 link-dark mt-2 mx-2"><i class="bi-list"></i></a>
                     <a href="#" class="fs-3 link-primary mx-1"><i class="bi-facebook"></i></a>
                     <a href="#" class="fs-3 link-info mx-1"><i class="bi-twitter"></i></a>
-                    <a href="#" class="fs-3 link-danger mx-1"><i class="bi-instagram"></i></a>
+                    <a href="#" class="fs-3 link-danger ms-1 me-3"><i class="bi-instagram"></i></a>
                 </div>
-
             </div>
         </div>
     </div>
-    <div class="container-lg py-5">
+    <div class="container-xl py-5">
         <div class="row align-items-center justify-content-center">
-            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5">
+            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-4">
                 <div class="display-5 text-success fw-bold my-2">One-click solution for your static website</div>
                 <div class="d-flex text-gray small my-4">Image from &nbsp<div class="border-bottom border-success">Freepik</div></div>
                 <div class="d-flex my-3">
@@ -41,11 +40,11 @@
             </div>
         </div>
     </div>
-    <div class="container-lg">
+    <div class="container-xl">
         <div class="bg-light">
             <div class="py-5">
                 <div class="row align-items-center justify-content-center">
-                    <div class="col-10 col-sm-7 col-md-8 col-lg-5 col-xl-6">
+                    <div class="col-10 col-sm-7 col-md-8 col-lg-5 col-xl-5">
                         <div class="display-5 text-success fw-bold my-2">Hosting solutions with benefits.</div>
                         <div class="text-dark h6 my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis sint sed inventore quaerat omnis quod libero. Nemo quasi minus ducimus.</div>
                         <a href="#" class="text-center text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-4 px-4 py-2">read more</a>
@@ -88,7 +87,7 @@
                                 </div>
                                 <div class="card border-0 my-3 text-center bg-white">
                                     <div class="">
-                                        <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
+                                        <div class="my-4"><i class="bi-hdd-stack-fill bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
                                         <a href="#" class="text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
                                     </div>
                                     <div class="card-body">
@@ -99,6 +98,40 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="my-5">
+                <div class="row align-items-center ">
+                    <div class="col-10 col-sm-8 col-md-10 col-lg-10 col-xl-10 my-1">
+                        <div class="display-4 fw-bold text-success my-3">Purchase</div>
+                    </div>
+                    <div class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 my-1">
+                        <div class="h5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, in. Commodi quasi accusantium..</div>
+                    </div>
+                    <divc class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 my-1">
+                        <div class="row align-items-center justify-content-center h6">
+                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 my-1">
+                                <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Pages</div></div>
+                                <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Forms</div></div>
+                                <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited HTPS</div></div>
+                            </div>
+                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 my-1">
+                                <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Free Sub-Domain</div></div>
+                                <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Data</div></div>
+                                <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">24/7 Support</div></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="my-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div>Starter Plan</div>
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
