--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
         <div class="container-xl navbar-xl fixed-top bg-light bg-opacity-50 py-2">
             <div class="d-flex justify-content-between align-items-center">
                 <div><i class="fs-4 text-secondary fst-normal fw-semibold mx-3">logo</i></div>
-                <div>
-                    <a href="#" class="fs-3 link-dark mt-2 mx-2"><i class="bi-list"></i></a>
-                    <a href="#" class="fs-3 link-primary mx-1"><i class="bi-facebook"></i></a>
-                    <a href="#" class="fs-3 link-info mx-1"><i class="bi-twitter"></i></a>
-                    <a href="#" class="fs-3 link-danger ms-1 me-3"><i class="bi-instagram"></i></a>
+                <div class="align-items-center">
+                    <a href="#" class="fs-3 btn link-dark px-1 py-0"><i class="bi-list"></i></a>
+                    <a href="#" class="fs-3 btn link-primary px-1 py-0"><i class="bi-facebook"></i></a>
+                    <a href="#" class="fs-3 btn link-info px-1 py-0"><i class="bi-twitter"></i></a>
+                    <a href="#" class="fs-3 btn link-danger px-1 py-0 me-3"><i class="bi-instagram"></i></a>
                 </div>
             </div>
         </div>
     </div>
     <div class="container-xl py-5">
         <div class="row align-items-center justify-content-center">
-            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-4">
+            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-4 my-3">
                 <div class="display-5 text-success fw-bold my-2">One-click solution for your static website</div>
-                <div class="d-flex text-gray small my-4">Image from &nbsp<div class="border-bottom border-success">Freepik</div></div>
-                <div class="d-flex my-3">
-                    <a href="#" class="text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 px-1 py-2 "><i class="bi-upload px-2">&nbsp Upload for Free</i></a>
-                    <a href="#" class="text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none mx-2 my-3 px-1 py-2 "><i class="bi-youtube px-2">&nbsp Upload for Free</i></a>
-                </div>
+                <div class="d-flex text-gray small my-4">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a></div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex my-3">
+                <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 me-2 px-1 py-2"><i class="bi-upload ">&nbsp Upload for Free</i></a>
+                <a href="#" class="btn text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none my-3 px-1 py-2"><i class="bi-youtube ">&nbsp Upload for Free</i></a>
+            </div>
             </div>
             <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 my-3">
                 <img src="img/01.png" class="img-fluid" alt="">
@@ -47,7 +47,7 @@
                     <div class="col-10 col-sm-7 col-md-8 col-lg-5 col-xl-5">
                         <div class="display-5 text-success fw-bold my-2">Hosting solutions with benefits.</div>
                         <div class="text-dark h6 my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis sint sed inventore quaerat omnis quod libero. Nemo quasi minus ducimus.</div>
-                        <a href="#" class="text-center text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-4 px-4 py-2">read more</a>
+                        <a href="#" class="btn text-center text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-4 px-4 py-2">read more</a>
                     </div>
                     <div class="col-10 col-sm-7 col-md-10 col-lg-7 col-xl-6 my-5">
                         <div class="row align-items-center justify-content-center g-4">
@@ -55,7 +55,7 @@
                                 <div class="card border-0 my-3 text-center bg-white">
                                     <div class="">
                                         <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
-                                        <a href="#" class="text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
+                                        <a href="#" class="btn text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
                                     </div>
                                     <div class="card-body">
                                         <div class="h4 text-success my-3">SSL Certificate</div>
@@ -88,7 +88,7 @@
                                 <div class="card border-0 my-3 text-center bg-white">
                                     <div class="">
                                         <div class="my-4"><i class="bi-hdd-stack-fill bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
-                                        <a href="#" class="text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
+                                        <a href="#" class="btn text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
                                     </div>
                                     <div class="card-body">
                                         <div class="h4 text-success my-3">SSL Certificate</div>
@@ -109,7 +109,7 @@
                     <div class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 my-1">
                         <div class="h5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, in. Commodi quasi accusantium..</div>
                     </div>
-                    <divc class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 my-1">
+                    <divc class="col-8 col-sm-8 col-md-8 col-lg-5 col-xl-5 my-1">
                         <div class="row align-items-center justify-content-center h6">
                             <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 my-1">
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Pages</div></div>
@@ -124,14 +124,39 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="my-3">
-                <div class="card">
-                    <div class="card-body">
-                        <div>Starter Plan</div>
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-10 col-sm-8 col-md-3 col-lg-3 col-xl-3 my-1">
+                        <div class="card bg-success">
+                            <div class="card-body">
+                                <div class="h6 text-light ">Starter Plan</div>
+                                <div class="card-title text-light display-4 fw-bold text-opacity-75 my-3">FREE</div>
+                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
+                                <div class="text-light small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 col-sm-8 col-md-3 col-lg-3 col-xl-3 my-1">
+                        <div class="card bg-white">
+                            <div class="card-body">
+                                <div class="h6 text-success ">Starter Plan</div>
+                                <div class="d-flex">
+                                    <div class="card-title text-success display-4 fw-bold text-opacity-75 my-3">$9 </div>
+                                    <div class="text-success text-small align-items-end">/month</div>
+                                </div>
+                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
+                                <div class="text-light small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 col-sm-8 col-md-3 col-lg-3 col-xl-3 my-1">
+                        <div class="card bg-success">
+                            <div class="card-body">
+                                <div class="h6 text-light ">Starter Plan</div>
+                                <div class="card-title text-light display-4 fw-bold text-opacity-75 my-3">FREE</div>
+                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
+                                <div class="text-light small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
