--- a/index.html
+++ b/index.html
@@ -27,31 +27,31 @@
     </div>
     <div class="container-xl py-5">
         <div class="row align-items-center justify-content-center">
-            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-4 my-3">
+            <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-4 col-xxl-4 my-3">
                 <div class="display-5 text-success fw-bold my-2">One-click solution for your static website</div>
                 <div class="d-flex text-gray small my-4">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a></div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex my-3">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-10 d-flex my-3">
                 <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 me-2 px-1 py-2"><i class="bi-upload ">&nbsp Upload for Free</i></a>
                 <a href="#" class="btn text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none my-3 px-1 py-2"><i class="bi-youtube ">&nbsp Upload for Free</i></a>
             </div>
             </div>
-            <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 my-3">
+            <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-5 my-3">
                 <img src="img/01.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
     <div class="container-xl">
-        <div class="bg-light">
-            <div class="py-5">
+        <div class="bg-secondary bg-opacity-10">
+            <div class="py-3">
                 <div class="row align-items-center justify-content-center">
-                    <div class="col-10 col-sm-7 col-md-8 col-lg-5 col-xl-5">
+                    <div class="col-10 col-sm-7 col-md-8 col-lg-4 col-xl-5 col-xxl-5">
                         <div class="display-5 text-success fw-bold my-2">Hosting solutions with benefits.</div>
                         <div class="text-dark h6 my-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis sint sed inventore quaerat omnis quod libero. Nemo quasi minus ducimus.</div>
                         <a href="#" class="btn text-center text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-4 px-4 py-2">read more</a>
                     </div>
-                    <div class="col-10 col-sm-7 col-md-10 col-lg-7 col-xl-6 my-5">
+                    <div class="col-10 col-sm-7 col-md-10 col-lg-7 col-xl-6 col-xxl-6 my-4">
                         <div class="row align-items-center justify-content-center g-4">
-                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 my-2">
+                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-2">
                                 <div class="card border-0 my-3 text-center bg-white">
                                     <div class="">
                                         <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
@@ -74,7 +74,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" col-10 col-sm-8 col-md-10 col-lg-6 col-xl-5 my-1">
+                            <div class=" col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-1">
                                 <div class="card border-0 my-3 text-center bg-white">
                                     <div class="">
                                         <div class="my-4"><i class="bi-globe bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
@@ -101,22 +101,22 @@
                     </div>
                 </div>
             </div>
-            <div class="my-5">
-                <div class="row align-items-center ">
-                    <div class="col-10 col-sm-8 col-md-10 col-lg-10 col-xl-10 my-1">
+            <div class="my-3 p-3">
+                <div class="row align-items-center justify-content-stretch">
+                    <div class="col-10 col-sm-8 col-md-10 col-lg-10 col-xl-10 col-xxl-10 my-1 ms-5">
                         <div class="display-4 fw-bold text-success my-3">Purchase</div>
                     </div>
-                    <div class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 my-1">
+                    <div class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 col-xxl-5 my-1 ms-5">
                         <div class="h5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, in. Commodi quasi accusantium..</div>
                     </div>
-                    <divc class="col-8 col-sm-8 col-md-8 col-lg-5 col-xl-5 my-1">
+                    <divc class="col-8 col-sm-8 col-md-8 col-lg-5 col-xl-5 col-xxl-4 my-1">
                         <div class="row align-items-center justify-content-center h6">
-                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 my-1">
+                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 my-1">
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Pages</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Forms</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited HTPS</div></div>
                             </div>
-                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 my-1">
+                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 my-1">
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Free Sub-Domain</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Data</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">24/7 Support</div></div>
@@ -124,40 +124,105 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-10 col-sm-8 col-md-3 col-lg-3 col-xl-3 my-1">
-                        <div class="card bg-success">
-                            <div class="card-body">
-                                <div class="h6 text-light ">Starter Plan</div>
-                                <div class="card-title text-light display-4 fw-bold text-opacity-75 my-3">FREE</div>
+                <div class="row justify-content-center align-items-center g-2 p-3 py-5">
+                    <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1">
+                        <div class="bg-success">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
+                                <div class="h6 text-light my-2">Starter Plan</div>
+                                <div class="text-light display-4 fw-bold text-opacity-75 my-3">FREE</div>
                                 <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
                                 <div class="text-light small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 col-sm-8 col-md-3 col-lg-3 col-xl-3 my-1">
-                        <div class="card bg-white">
-                            <div class="card-body">
-                                <div class="h6 text-success ">Starter Plan</div>
-                                <div class="d-flex">
-                                    <div class="card-title text-success display-4 fw-bold text-opacity-75 my-3">$9 </div>
-                                    <div class="text-success text-small align-items-end">/month</div>
+                    <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1">
+                        <div class="bg-white">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
+                                <div class="row justify-content-between align-items-center">
+                                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 h6 text-success">Yearly Plan</div>
+                                    <div class=" col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 text-white small bg-warning btn rounded-5 px-2 py-0 me-3">SAVE 25%</div>
                                 </div>
-                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
-                                <div class="text-light small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                                <div class="d-flex align-items-center my-3">
+                                    <div class="text-success display-4 fw-bold">$9</div>
+                                    <div class="small fw-bold text-success mt-2">/month</div>
+                                </div>
+                                <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2">Proceed Anually <i class="bi-arrow-right fw-bold"></i></a>
+                                <div class="text-dark small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 col-sm-8 col-md-3 col-lg-3 col-xl-3 my-1">
-                        <div class="card bg-success">
-                            <div class="card-body">
-                                <div class="h6 text-light ">Starter Plan</div>
-                                <div class="card-title text-light display-4 fw-bold text-opacity-75 my-3">FREE</div>
-                                <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
-                                <div class="text-light small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                    <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1">
+                        <div class="bg-white">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
+                                <div class="row justify-content-between align-items-center">
+                                    <div class="col-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 col-xxl-10 h6 text-success">Monthly Plan</div>
+                                </div>
+                                <div class="d-flex align-items-center my-3">
+                                    <div class="text-success display-4 fw-bold">$12</div>
+                                    <div class="small fw-bold text-success mt-4">/month</div>
+                                </div>
+                                <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2">Proceed Anually <i class="bi-arrow-right fw-bold"></i></a>
+                                <div class="text-dark small my-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+    <div class="container-xl">
+        <div class="bg-white my-5 py-5">
+            <div class="row justify-content-center align-items-center g-4">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1 me-5">
+                    <img src="img/02.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 ms-5 p-5">
+                    <div class="display-5 text-success fw-bold mt-2 py-4">Get started with the simpliest static page</div>
+                    <div class="d-flex text-gray small mb-4">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a>
+                </div>
+                    <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none mb-5 me-2 px-1 py-2"><div class="bi-upload ">&nbsp Upload for Free</div></a>
+            </div>
+            <div class="row">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                    <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
+                    <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
+                    <div class="row d-flex">
+                        <div class="small text-dark align-items-center">beatae nihil facer</div>
+                        <div class="bi-quote text-dark"></div>
+                    </div>
+                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
+                    <div class="small text-dark my-3">Chef Accountant</div>
+                </div>
+                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                    <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
+                    <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
+                    <div class="row d-flex">
+                        <div class="small text-dark align-items-center">beatae nihil facer</div>
+                        <div class="bi-quote text-dark"></div>
+                    </div>
+                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
+                    <div class="small text-dark my-3">Chef Accountant</div>
+                </div>
+                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                    <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
+                    <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
+                    <div class="row d-flex">
+                        <div class="small text-dark align-items-center">beatae nihil facer</div>
+                        <div class="bi-quote text-dark"></div>
+                    </div>
+                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
+                    <div class="small text-dark my-3">Chef Accountant</div>
+                </div>
+                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                    <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
+                    <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
+                    <div class="row d-flex">
+                        <div class="small text-dark align-items-center">beatae nihil facer</div>
+                        <div class="bi-quote text-dark"></div>
+                    </div>
+                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
+                    <div class="small text-dark my-3">Chef Accountant</div>
                 </div>
             </div>
         </div>
