--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     <div class="col-10 col-sm-8 col-md-10 col-lg-5 col-xl-5 col-xxl-5 my-1 ms-5">
                         <div class="h5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, in. Commodi quasi accusantium..</div>
                     </div>
-                    <divc class="col-8 col-sm-8 col-md-8 col-lg-5 col-xl-5 col-xxl-4 my-1">
-                        <div class="row align-items-center justify-content-center h6">
+                    <divc class="col-12 col-sm-8 col-md-8 col-lg-5 col-xl-5 col-xxl-4 my-1">
+                        <div class="row justify-content-center h6">
                             <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 my-1">
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Pages</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-1"&nbsp;><div class="text-dark ">Unlimited Forms</div></div>
@@ -173,18 +173,18 @@
     </div>
     <div class="container-xl">
         <div class="bg-white my-5 py-5">
-            <div class="row justify-content-center align-items-center g-4">
-                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1 me-5">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1">
                     <img src="img/02.png" class="img-fluid" alt="">
                 </div>
-                <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 ms-5 p-5">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 p-5">
                     <div class="display-5 text-success fw-bold mt-2 py-4">Get started with the simpliest static page</div>
-                    <div class="d-flex text-gray small mb-4">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a>
+                    <div class="d-flex text-gray small mb-4">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</a></div>
                 </div>
                     <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none mb-5 me-2 px-1 py-2"><div class="bi-upload ">&nbsp Upload for Free</div></a>
             </div>
-            <div class="row">
-                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+            <div class="row g-4 justify-content-center align-items-center">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
@@ -194,37 +194,40 @@
                     <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
                     <div class="small text-dark my-3">Chef Accountant</div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
                         <div class="small text-dark align-items-center">beatae nihil facer</div>
                         <div class="bi-quote text-dark"></div>
                     </div>
-                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
-                    <div class="small text-dark my-3">Chef Accountant</div>
+                    <div class="text-success h6 mt-4 mb-2">Celia Almeda</div>
+                    <div class="small text-dark my-3">Secretary</div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
                         <div class="small text-dark align-items-center">beatae nihil facer</div>
                         <div class="bi-quote text-dark"></div>
                     </div>
-                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
-                    <div class="small text-dark my-3">Chef Accountant</div>
+                    <div class="text-success h6 mt-4 mb-2">Bob Roberts</div>
+                    <div class="small text-dark my-3">Sales Manager</div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-6 col-lg-3 col-xl-3 col-xxl-3 my-1 bg-secondary bg-opacity-10 text-center align-items-center">
+                <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
                     <div class="row d-flex">
                         <div class="small text-dark align-items-center">beatae nihil facer</div>
                         <div class="bi-quote text-dark"></div>
                     </div>
-                    <div class="text-success h6 mt-4 mb-2">Nat Reynolds</div>
-                    <div class="small text-dark my-3">Chef Accountant</div>
+                    <div class="text-success h6 mt-4 mb-2">Mattie Smith</div>
+                    <div class="small text-dark my-3">Accountant</div>
                 </div>
             </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mt-1 text-center d-flex text-gray small mb-4">Image from &nbsp;<a href="#" class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 text-decoration-underline text-success"><div class="text-dark">Freepik</div></a>
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
