--- a/index.html
+++ b/index.html
@@ -225,10 +225,13 @@
                     <div class="small text-dark my-3">Accountant</div>
                 </div>
             </div>
+            <div class="row text-center">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 my-3">
+                    <div class="text-gray small mb-4">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a>
+                </div>
+            </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mt-1 text-center d-flex text-gray small mb-4">Image from &nbsp;<a href="#" class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 text-decoration-underline text-success"><div class="text-dark">Freepik</div></a>
-        </div>
+        
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/splide.min.js"></script>
