--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
                                 <div class="h6 text-light my-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="250">Starter Plan</div>
                                 <div class="text-light display-4 fw-bold text-opacity-75 my-3" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="250">FREE</div>
                                 <a href="#" class="btn text-center text-success small fw-bold border-1 rounded-2 bg-white text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Upload for Free <i class="bi-arrow-right fw-bold"></i></a>
-                                <div class="text-light small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="350">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                                <div class="text-light small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="350">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem, ipsum dolor.</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-10 col-sm-8 col-md-4 col-lg-3 col-xl-4 col-xxl-4 my-1" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="100">
                         <div class="bg-white">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 p-3">
-                                <div class="row justify-content-between align-items-center" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="150">
-                                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 h6 text-success">Yearly Plan</div>
-                                    <div class=" col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 text-white small bg-warning btn rounded-5 px-2 py-0 me-3">SAVE 25%</div>
+                                <div class="row justify-content-between align-items-center">
+                                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6 h6 text-success" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="150">Yearly Plan</div>
+                                    <div class=" col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 text-white small bg-warning btn rounded-5 px-2 py-0 me-3" data-aos="flip-right" data-aos-duration="2000" data-aos-delay="150">SAVE 25%</div>
                                 </div>
                                 <div class="d-flex align-items-center my-3" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="150">
                                     <div class="text-success display-4 fw-bold">$9</div>
                                     <div class="small fw-bold text-success mt-2">/month</div>
                                 </div>
                                 <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">Proceed Anually <i class="bi-arrow-right fw-bold"></i></a>
-                                <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                                <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet.</div>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                                     <div class="small fw-bold text-success mt-4">/month</div>
                                 </div>
                                 <a href="#" class="btn text-center text-white small fw-bold border-1 rounded-2 bg-success text-decoration-none my-4 px-2 py-2" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">Proceed Anually <i class="bi-arrow-right fw-bold"></i></a>
-                                <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="350">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+                                <div class="text-dark small my-5" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="350">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem.</div>
                             </div>
                         </div>
                     </div>
