--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="bg-white">
-        <div class="container-xl navbar-xl fixed-top bg-light bg-opacity-50 py-2">
+        <div class="container-xl navbar-xl fixed-top bg-light bg-opacity-75 py-2">
             <div class="d-flex justify-content-between align-items-center">
                 <div data-aos="zoom-in-right" data-aos-duration="1500" data-aos-delay="100"><i class="fs-4 text-secondary fst-normal fw-semibold mx-3" >logo</i></div>
                 <div class="align-items-center">
@@ -31,8 +31,8 @@
                 <div class="display-5 text-success fw-bold my-2" data-aos="fade-down-right" data-aos-duration="1000" data-aos-delay="100">One-click solution for your static website</div>
                 <div class="d-flex text-gray small my-4" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">Image from &nbsp;<a href="#" class="text-decoration-underline text-success"><div class="text-dark">Freepik</div></a></div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-10 d-flex my-3">
-                <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 me-2 px-1 py-2" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="200"><i class="bi-upload">&nbsp Upload for Free</i></a>
-                <a href="#" class="btn text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none my-3 px-1 py-2" data-aos="flip-right" data-aos-duration="1200" data-aos-delay="300"><i class="bi-youtube">&nbsp Upload for Free</i></a>
+                <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none my-3 me-4 px-1 py-2" data-aos="flip-left" data-aos-duration="1200" data-aos-delay="200"><i class="bi-upload">&nbsp Upload for Free</i></a>
+                <a href="#" class="btn text-dark small fst-normal fw-bold border-1 rounded-2 bg-light text-decoration-none my-3 px-1 py-2" data-aos="flip-right" data-aos-duration="1200" data-aos-delay="300"><i class="bi-youtube">&nbsp Watch Video</i></a>
             </div>
             </div>
             <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-5 my-3" data-aos="zoom-in-down" data-aos-duration="1200" data-aos-delay="200">
@@ -51,8 +51,8 @@
                     </div>
                     <div class="col-10 col-sm-7 col-md-10 col-lg-7 col-xl-6 col-xxl-6 my-4">
                         <div class="row align-items-center justify-content-center g-4">
-                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-2">
-                                <div class="card border-0 my-3 text-center bg-white" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-delay="100">
+                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-2 ">
+                                <div class="card border-0 my-3 text-center bg-white rounded-0" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-delay="100">
                                     <div class="">
                                         <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
                                         <a href="#" class="btn text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
@@ -63,7 +63,7 @@
                                         <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark"> MORE</div></a>
                                     </div>
                                 </div>
-                                <div class="card border-0 my-3 text-center bg-white" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="300">
+                                <div class="card border-0 my-3 text-center bg-white rounded-0" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="300">
                                     <div class="">
                                         <div class="my-4"><i class="bi-code-square bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
                                     </div>
@@ -74,8 +74,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class=" col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-1">
-                                <div class="card border-0 my-3 text-center bg-white" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-delay="200">
+                            <div class=" col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-1 ">
+                                <div class="card border-0 my-3 text-center bg-white rounded-0" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-delay="200">
                                     <div class="">
                                         <div class="my-4"><i class="bi-globe bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
                                     </div>
@@ -85,7 +85,7 @@
                                         <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark"> MORE</div></a>
                                     </div>
                                 </div>
-                                <div class="card border-0 my-3 text-center bg-white" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="400">
+                                <div class="card border-0 my-3 text-center bg-white rounded-0" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="400">
                                     <div class="">
                                         <div class="my-4"><i class="bi-hdd-stack-fill bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
                                         <a href="#" class="btn text-center text-white small fst-normal border-1 rounded-5 bg-success text-decoration-none my-2 px-3 py-2">FREE</a>
@@ -111,7 +111,7 @@
                     </div>
                     <divc class="col-12 col-sm-8 col-md-8 col-lg-5 col-xl-5 col-xxl-4 my-1">
                         <div class="row justify-content-center h6">
-                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5 my-1" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="200">
+                            <div class="col-5 col-sm-5 col-md-5 col-lg-6 col-xl-6 col-xxl-6 my-1" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="200">
                                 <div class="bi-check text-success d-flex align-items-center my-2"&nbsp;><div class="text-dark ">Unlimited Pages</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-2"&nbsp;><div class="text-dark ">Unlimited Forms</div></div>
                                 <div class="bi-check text-success d-flex align-items-center my-2"&nbsp;><div class="text-dark ">Unlimited HTPS</div></div>
@@ -174,7 +174,7 @@
     <div class="container-xl">
         <div class="bg-white my-5 py-5">
             <div class="row justify-content-center align-items-center">
-                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1" data-aos="fade-down-right" data-aos-duration="2000" data-aos-delay="100">
+                <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1 p-4" data-aos="fade-down-right" data-aos-duration="2000" data-aos-delay="100">
                     <img src="img/02.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 p-5" data-aos="fade-down-left" data-aos-duration="2000" data-aos-delay="200">
@@ -183,7 +183,7 @@
                 </div>
                     <a href="#" class="btn text-white small fst-normal border-1 rounded-2 bg-success text-decoration-none mb-5 me-2 px-1 py-2" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="300"><div class="bi-upload ">&nbsp Upload for Free</div></a>
             </div>
-            <div class="row g-4 justify-content-center align-items-center">
+            <div class="row justify-content-center align-items-center">
                 <div class="col-5 col-sm-5 col-md-6 col-lg-2 col-xl-2 col-xxl-2 my-1 bg-secondary bg-opacity-10 text-center align-items-center mx-2 rounded-bottom-3" data-aos="fade-up-right" data-aos-duration="2000" data-aos-delay="100">
                     <div class=" small text-dark align-items-center">Lorem ipsum dolor</div> 
                     <div class="small text-dark align-items-center">consectetur adipisicing elit</div>
