--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             </div>
             <div class="col-11 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-5 my-3" data-aos="zoom-in-down" data-aos-duration="1200" data-aos-delay="200">
-                <img src="img/01.png" class="img-fluid" alt="">
+                <img src="img/01.png" class="img-fluid">
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col-10 col-sm-7 col-md-10 col-lg-7 col-xl-6 col-xxl-6 my-4">
                         <div class="row align-items-center justify-content-center g-4">
-                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-2 ">
+                            <div class="col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-2">
                                 <div class="card border-0 my-3 text-center bg-white rounded-0" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-delay="100">
                                     <div class="">
                                         <div class="my-4"><i class="bi-lock bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
@@ -70,11 +70,11 @@
                                     <div class="card-body">
                                         <div class="h4 text-success my-3">Code Editor</div>
                                         <div class="fst-italic small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facere quae? Eos cum perferendis error.</div>
-                                        <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark"> MORE</div></a>
+                                        <a href="#" class="text-decoration-underline text-success m-2"><div class="text-dark">MORE</div></a>
                                     </div>
                                 </div>
                             </div>
-                            <div class=" col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-1 ">
+                            <div class=" col-10 col-sm-9 col-md-10 col-lg-6 col-xl-5 col-xxl-5 my-1">
                                 <div class="card border-0 my-3 text-center bg-white rounded-0" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-delay="200">
                                     <div class="">
                                         <div class="my-4"><i class="bi-globe bg-success bg-opacity-50 text-success fs-1 px-3 py-2 rounded-5 text-center"></i></div>
@@ -93,7 +93,7 @@
                                     <div class="card-body">
                                         <div class="h4 text-success my-3">SSL Certificate</div>
                                         <div class="fst-italic small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, facere quae? Eos cum perferendis error.</div>
-                                        <a href="#" class="text-decoration-underline text-success m-5"><div class="text-dark"> MORE</div></a>
+                                        <a href="#" class="text-decoration-underline text-success m-5"><div class="text-dark">MORE</div></a>
                                     </div>
                                 </div>
                             </div>
@@ -175,7 +175,7 @@
         <div class="bg-white my-5 py-5">
             <div class="row justify-content-center align-items-center">
                 <div class="col-11 col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-5 my-1 p-4" data-aos="fade-down-right" data-aos-duration="2000" data-aos-delay="100">
-                    <img src="img/02.png" class="img-fluid" alt="">
+                    <img src="img/02.png" class="img-fluid">
                 </div>
                 <div class="col-11 col-sm-10 col-md-8 col-lg-4 col-xl-4 col-xxl-5 my-3 bg-secondary bg-opacity-10 p-5" data-aos="fade-down-left" data-aos-duration="2000" data-aos-delay="200">
                     <div class="display-5 text-success fw-bold mt-2 py-4" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">Get started with the simpliest static page</div>
@@ -231,7 +231,6 @@
                 </div>
             </div>
         </div>
-        
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/splide.min.js"></script>
